--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <aside class="sidebar " data-sidebar>
             <div class="sidebar-info">
                 <figure class="avatar-box">
-                    <img class="memoji" src="/Media/Memoji.png" alt="avatar" width="80">
+                    <img class="memoji" src="https://i.postimg.cc/T393SBTX/Memoji.png" alt="avatar" width="80">
                 </figure>
                 <div class="info-content">
                     <h1 class="name" title="Nicola Nespoli">Nicola Nespoli</h1>
@@ -92,7 +92,7 @@
                     <ul class="service-list">
                         <li class="service-item">
                             <div class="service-icon-box">
-                            <img src="/Media/Phonometer.png" alt="icon" width="40">
+                            <img src="https://i.postimg.cc/Phonometer.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Acoustic Measurements</h4>
@@ -101,7 +101,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="/Media/DSP.png" alt="icon" width="40">
+                                <img src="https://i.postimg.cc/DSP.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Digital Signal Processing</h4>
@@ -110,7 +110,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="/Media/MIR.png" alt="icon" width="40">
+                                <img src="https://i.postimg.cc/MIR.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Music Information Retrieval</h4>
@@ -119,7 +119,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="/Media/Creative Programming.png" alt="icon" width="40">
+                                <img src="https://i.postimg.cc/Creative Programming.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Creative Audio Programming</h4>
@@ -223,7 +223,7 @@
                             <a href="https://github.com/zabayone/Actam_Project">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="/Media/Earbuddy.png" alt="Ear Buddy" loading="lazy">
+                                    <img src="https://i.postimg.cc/Earbuddy.png" alt="Ear Buddy" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">Ear Buddy - Ear and vocal training website</h3>
                                 <p class="project-category">Creative Programming</p>
@@ -233,7 +233,7 @@
                             <a href="https://github.com/zabayone/International-Love">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="/Media/International Love Board.jpg" alt="T.I.L.E.S." loading="lazy">
+                                    <img src="https://i.postimg.cc/International Love Board.jpg" alt="T.I.L.E.S." loading="lazy">
                                 </figure>
                                 <h3 class="project-title">T.I.L.E.S. </h3>
                                 <p class="project-category">Creative Programming</p> 
@@ -244,7 +244,7 @@
                             <a href="https://github.com/zabayone/STMAE-final-project">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="/Media/Stmae.png" alt="Signal Analyzer App" loading="lazy">
+                                    <img src="https://i.postimg.cc/Stmae.png" alt="Signal Analyzer App" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">ST Final project</h3>
                                 <p class="project-category">Music Information Retrieval</p>
