--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </header>
                 <section class="about-text">
                     <p>I'm Nicola Nespoli, an Acoustic Engineering student at Politecnico di Milano. I love exploring the intersection of sound, technology, and creativity. My interest is focused on finding innovative solutions to real-life acoustic problems, from room acoustics to audio signal processing.</p>
-                    <p>I combine technical knowledge with curiosity, always striving to improve my skills in both scientific research and practical engineering. My goal is to bring innovation in the sound industry so that peopla can play, listen and create music in new and better ways</p>
+                    <p>I combine technical knowledge with curiosity, always striving to improve my skills in both scientific research and practical engineering. My goal is to bring innovation in the sound industry so that people can play, listen and create music in new and better ways</p>
                 </section>
                 <section class="service">
                     <h3 class="h3 service-title">What I'm studying & exploring</h3>
