--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
                                     <img src="https://i.postimg.cc/MK1T0v4W/International-Love-Board.jpg" alt="T.I.L.E.S." loading="lazy">
                                 </figure>
-                                <h3 class="project-title">T.I.L.E.S. </h3>
+                                <h3 class="project-title">T.I.L.E.S. - Tangible Interface for Layered Electronic Sounds</h3>
                                 <p class="project-category">Creative Programming</p> 
                                 <p class="project-category">Digital Signal Processing</p>
                             </a>
