--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <figure class="avatar-box">
                     <img class="memoji" src="https://i.postimg.cc/T393SBTX/Memoji.png" alt="avatar" width="80">
                 </figure>
+                <button class="theme-toggle-btn" data-theme-toggle>
+                    <ion-icon name="moon-outline" class="theme-icon"></ion-icon>
+                </button>   
                 <div class="info-content">
                     <h1 class="name" title="Nicola Nespoli">Nicola Nespoli</h1>
                     <p class="title">Acoustic Engineering Student</p>
