a bit of cleaning and transparency

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Original design: https://codepen.io/leonam-silva-de-souza/pen/vYowKqP -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -176,7 +177,7 @@
                             <span>2024 - Present</span>
                             <p class="timeline-text">
                                 Produced, mixed, and mastered tracks for 
-                                <a href="https://open.spotify.com/intl-it/artist/3kfI04iC8lA53MbRp9l7bB?si=b89uXSKdQ2m5qnzfv-NhaA" target="_blank" rel="noopener noreferrer" style="color: white; text-decoration: underline">my band.</a>
+                                <a href="https://open.spotify.com/intl-it/artist/3kfI04iC8lA53MbRp9l7bB?si=b89uXSKdQ2m5qnzfv-NhaA" target="_blank" rel="noopener noreferrer" style="color: var(--white1); text-decoration: underline">my band.</a>
                             </p>
                         </li>
                         </ol>
