added new project

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
                         <li class="filter-item"><button data-filter-btn>Creative Programming</button></li>
                         <li class="filter-item"><button data-filter-btn>Digital Signal Processing</button></li>
                         <li class="filter-item"><button data-filter-btn>Music Information Retrieval</button></li>
+                        <li class="filter-item"><button data-filter-btn>Acoustics</button></li>
                     </ul>
                     <div class="filter-select-box">
                         <button class="filter-select " data-select>
@@ -220,6 +221,7 @@
                             <li class="select-item"><button data-select-item>Creative Programming</button></li>
                             <li class="select-item"><button data-select-item>Digital Signal Processing</button></li>
                             <li class="select-item"><button data-select-item>Music Information Retrieval</button></li>
+                            <li class="select-item"><button data-select-item>Acoustics</button></li>
                         </ul>
                     </div>
                     <ul class="project-list">
@@ -248,10 +250,21 @@
                             <a href="https://github.com/zabayone/STMAE-final-project">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="https://i.postimg.cc/K8N8VCxp/Stmae.png" alt="Signal Analyzer App" loading="lazy">
+                                    <img src="https://i.postimg.cc/K8N8VCxp/Stmae.png" alt="STMAE Final Project" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">ST Final project</h3>
                                 <p class="project-category">Music Information Retrieval</p>
+                            </a>
+                        </li>
+                        <li class="project-item active" data-filter-item data-category="Mu
+                        sic Information Retrieval">
+                            <a href="https://github.com/zabayone/STMAE-final-project">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+                                    <img src="https://i.postimg.cc/K8N8VCxp/Stmae.png" alt="Room Acoustics Project" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Room Acoustics Project</h3>
+                                <p class="project-category">Acoustics</p>
                             </a>
                         </li>
                     </ul>
