--- a/index.html
+++ b/index.html
@@ -256,9 +256,8 @@
                                 <p class="project-category">Music Information Retrieval</p>
                             </a>
                         </li>
-                        <li class="project-item active" data-filter-item data-category="Mu
-                        sic Information Retrieval">
-                            <a href="https://github.com/zabayone/STMAE-final-project">
+                        <li class="project-item active" data-filter-item data-category="Acoustics">
+                            <a href="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/RoomAcoustics.pdf">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
                                     <img src="https://i.postimg.cc/K8N8VCxp/Stmae.png" alt="Room Acoustics Project" loading="lazy">
