--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                             <img src="https://i.postimg.cc/hPVj8fwh/Phonometer.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Acoustic Measurements</h4>
-                                <p class="service-item-text">Learning and applying techniques to measure room acoustics, sound quality, and spatial audio properties.</p>
+                                <h4 class="h4 service-item-title">Environmental Acoustics</h4>
+                                <p class="service-item-text">Learning and applying techniques to measure room acoustics, sound quality, and spatial audio properties. Designing and treating rooms for various acoustic needs.</p>
                             </div>
                         </li>
                         <li class="service-item">
@@ -185,7 +185,7 @@
                 <section class="skill">
                 <h3 class="h3 skills-title">My Skills</h3>
                 <ul class="skills-list content-card">
-                    <li class="skills-item">Acoustic Measurements</li>
+                    <li class="skills-item">Environmental Acoustics</li>
                     <li class="skills-item">Digital Signal Processing</li>
                     <li class="skills-item">Music Production</li>
                     <li class="skills-item">Programming: <span class="subskills">Python: Librosa, Numpy, Scipy, Tensorflow, Keras. Matlab, C++ (Juce), Supercollider.</span></li>
@@ -195,7 +195,7 @@
 
 
                 
-
+                
             </article>
             <article class="portfolio " data-page="portfolio">
                 <header>
@@ -260,9 +260,9 @@
                             <a href="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/RoomAcoustics.pdf">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="https://i.postimg.cc/K8N8VCxp/Stmae.png" alt="Room Acoustics Project" loading="lazy">
+                                    <img src="https://i.postimg.cc/Y2DTCJnS/Room-Acoustics.png" alt="Room Acoustics Project" loading="lazy">
                                 </figure>
-                                <h3 class="project-title">Room Acoustics Project</h3>
+                                <h3 class="project-title">Room Acoustics Final Projects (PDF report)</h3>
                                 <p class="project-category">Acoustics</p>
                             </a>
                         </li>
