etrcomp added to portfolio

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                         <li class="filter-item"><button data-filter-btn>Digital Signal Processing</button></li>
                         <li class="filter-item"><button data-filter-btn>Music Information Retrieval</button></li>
                         <li class="filter-item"><button data-filter-btn>Acoustics</button></li>
+                        <li class="filter-item"><button data-filter-btn>Sound Design</button></li>
                     </ul>
                     <div class="filter-select-box">
                         <button class="filter-select " data-select>
@@ -222,6 +223,7 @@
                             <li class="select-item"><button data-select-item>Digital Signal Processing</button></li>
                             <li class="select-item"><button data-select-item>Music Information Retrieval</button></li>
                             <li class="select-item"><button data-select-item>Acoustics</button></li>
+                            <li class="select-item"><button data-select-item>Sound Design</button></li>
                         </ul>
                     </div>
                     <ul class="project-list">
@@ -264,6 +266,16 @@
                                 </figure>
                                 <h3 class="project-title">Room Acoustics Final Projects (PDF report)</h3>
                                 <p class="project-category">Acoustics</p>
+                            </a>
+                        </li>
+                        <li class="project-item active" data-filter-item data-category="Acoustics">
+                            <a href="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/ElectroacousticComposition.zip">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+                                    <img src="https://i.postimg.cc/283Fc0jd/ETRCOMP.png" alt="Electroacoustic Composition Project" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Electroacoustic Composition Final Project</h3>
+                                <p class="project-category">Sound Design</p>
                             </a>
                         </li>
                     </ul>
