--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                 <p class="project-category">Acoustics</p>
                             </a>
                         </li>
-                        <li class="project-item active" data-filter-item data-category="Acoustics">
+                        <li class="project-item active" data-filter-item data-category="Sound Design">
                             <a href="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/ElectroacousticComposition.zip">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
