pushing again cause github pages :)

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
                                     <img src="https://i.postimg.cc/Y2DTCJnS/Room-Acoustics.png" alt="Room Acoustics Project" loading="lazy">
                                 </figure>
-                                <h3 class="project-title">Room Acoustics Final Projects (PDF report)</h3>
+                                <h3 class="project-title">Room Acoustics Final Projects</h3>
                                 <p class="project-category">Acoustics</p>
                             </a>
                         </li>
