--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="https://i.postimg.cc/T393SBTX/Memoji.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/Memoji.png" type="image/x-icon">
 </head>
 <body>
     <main>
         <aside class="sidebar " data-sidebar>
             <div class="sidebar-info">
                 <figure class="avatar-box">
-                    <img class="memoji" src="https://i.postimg.cc/T393SBTX/Memoji.png" alt="avatar" width="80">
+                    <img class="memoji" src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/Memoji.png" alt="avatar" width="80">
                 </figure>
                 <button class="theme-toggle-btn" data-theme-toggle>
                     <ion-icon name="moon-outline" class="theme-icon"></ion-icon>
@@ -96,7 +96,7 @@
                     <ul class="service-list">
                         <li class="service-item">
                             <div class="service-icon-box">
-                            <img src="https://i.postimg.cc/hPVj8fwh/Phonometer.png" alt="icon" width="40">
+                            <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/Phonometer.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Environmental Acoustics</h4>
@@ -105,7 +105,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="https://i.postimg.cc/05TjJptx/DSP.png" alt="icon" width="40">
+                                <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/DSP.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Digital Signal Processing</h4>
@@ -114,7 +114,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="https://i.postimg.cc/RVwF1N8z/MIR.png" alt="icon" width="40">
+                                <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/MIR.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Music Information Retrieval</h4>
@@ -123,7 +123,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="https://i.postimg.cc/2jsyB402/Creative-Programming.png" alt="icon" width="40">
+                                <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/Creative-Programming.png" alt="icon" width="40">
                             </div>
                             <div class="service-content-box">
                                 <h4 class="h4 service-item-title">Creative Audio Programming</h4>
@@ -231,7 +231,7 @@
                             <a href="https://github.com/zabayone/Actam_Project">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="https://i.postimg.cc/HkHL6TD5/Earbuddy.png" alt="Ear Buddy" loading="lazy">
+                                    <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/Earbuddy.png" alt="Ear Buddy" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">Ear Buddy - Ear and vocal training website</h3>
                                 <p class="project-category">Creative Programming</p>
@@ -241,7 +241,7 @@
                             <a href="https://github.com/zabayone/International-Love">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="https://i.postimg.cc/MK1T0v4W/International-Love-Board.jpg" alt="T.I.L.E.S." loading="lazy">
+                                    <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/International-Love-Board.jpg" alt="T.I.L.E.S." loading="lazy">
                                 </figure>
                                 <h3 class="project-title">T.I.L.E.S. - Tangible Interface for Layered Electronic Sounds</h3>
                                 <p class="project-category">Creative Programming</p> 
@@ -252,7 +252,7 @@
                             <a href="https://github.com/zabayone/STMAE-final-project">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="https://i.postimg.cc/K8N8VCxp/Stmae.png" alt="STMAE Final Project" loading="lazy">
+                                    <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/Stmae.png" alt="STMAE Final Project" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">ST Final project</h3>
                                 <p class="project-category">Music Information Retrieval</p>
@@ -262,7 +262,7 @@
                             <a href="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/RoomAcoustics.pdf">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="https://i.postimg.cc/Y2DTCJnS/Room-Acoustics.png" alt="Room Acoustics Project" loading="lazy">
+                                    <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/Room-Acoustics.png" alt="Room Acoustics Project" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">Room Acoustics Final Projects</h3>
                                 <p class="project-category">Acoustics</p>
@@ -272,7 +272,7 @@
                             <a href="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/ElectroacousticComposition.zip">
                                 <figure class="project-img">
                                     <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-                                    <img src="https://i.postimg.cc/283Fc0jd/ETRCOMP.png" alt="Electroacoustic Composition Project" loading="lazy">
+                                    <img src="https://raw.githubusercontent.com/zabayone/Portfolio/main/Media/ETRCOMP.png" alt="Electroacoustic Composition Project" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">Electroacoustic Composition Final Project</h3>
                                 <p class="project-category">Sound Design</p>
